--- a/helm/edu-ubb-gpu/values.yaml
+++ b/helm/edu-ubb-gpu/values.yaml
@@ -4,7 +4,7 @@ image:
   # verify this is correct by opening the following URL in your browser
   # https://github.com/manole-alexandru/edu-ubb-gpu/pkgs/container/edu-ubb-gpu
   repository: ghcr.io/manole-alexandru/cs-ubb-eduml-app-ma
-  tag: latest  # change this value to the latest specific image tag in the repository
+  tag: master-52f7d59  # change this value to the latest specific image tag in the repository
 
 # customize the name of the Mlflow experiment
 #experiment: edu-ubb-gpu-experiment
