--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,13 +24,11 @@ dependencies = [
     "python-dotenv==1.0.1",
     "minio==7.2.10",
     "mlflow==2.17.2",
-    "numpy==2.1.3",
-    "pandas==2.2.3",
     "scikit-learn==1.5.2",
-    "torch==2.5.0+cu121",
-    "torchvision==0.20.0+cu121",
+    "torch==2.5.0",
+    "torchvision==0.20.0",
     "numpy==1.26.4",
     "pandas==2.2.2",
-    "PIL==11.0.0",
+    "Pillow==11.0.0",
     "scipy==1.13.1"
 ]
